language changes; removed metric specification
