# rally2-matching-system/api/matching-system-swagger.yml
@@ -74,18 +74,11 @@ definitions:
       Score:
         type: number
         format: float
-        description: An un-normalized similarity score, as produced by the algorithm
+        description: A similarity score, as produced by the algorithm
         example: 8734
-        x-nullable: false
-      NormalizedScore:
-        type: number
-        format: float
-        description: Similarity score between 0 and 1, with 1 being the highest score the algorithm can produce
-        example: 0.8734
         x-nullable: false
     required:
       - Score
-      - NormalizedScore
 
   CompareListRequest:
     description: A single template object and a list of templates that it will be compared to.
@@ -150,18 +143,14 @@ definitions:
         type: string
         enum:
           - MDTF_2021_RALLY
-      ThresholdMetric:
-        description: A string enum to indicate the metric by which a comparision score is determined.
-        type: string
-        enum:
-          - Distance
-          - Similarity
-        example: Similarity
       Thresholds:
-        description: A map of False Match Rates to their threshold values.
+        description: A map of preset False Match Rates (FMR) to vendor provided threshold values.  Score values, returned from calls to v1/compare-list , greater than threshold value, at the respective FMR, indicate a matching determination by the algorithm.
+        
+        
           Note that threshold values are floats stored as strings and cannot exceed a length of 10 characters.
-          There are 5 required thresholds. 5 additional thresholds may be specified.
-        maxProperties: 10
+          There are 5 required thresholds. 
+          #5 additional thresholds may be specified.
+        maxProperties: 5 #10
         type: object
         properties:
           "1:500":
@@ -185,15 +174,15 @@ definitions:
           - "1:1e4"
           - "1:1e5"
           - "1:1e6"
-        additionalProperties:
-          type: string
-          maxLength: 10
+        # additionalProperties:
+        #   type: string
+        #   maxLength: 10
         example:
-          "1:500": "0.75"
-          "1:1e3": "0.85"
-          "1:1e4": "0.95"
-          "1:1e5": "0.97"
-          "1:1e6": "0.99"
+          "1:500": "7543"
+          "1:1e3": "8730"
+          "1:1e4": "9321"
+          "1:1e5": "9863"
+          "1:1e6": "9972"
     required:
       - AlgorithmName
       - AlgorithmVersion
@@ -203,7 +192,7 @@ definitions:
       - RecommendedCPUs
       - RecommendedMem
       - Test
-      - ThresholdMetric
+      # - ThresholdMetric
       - Thresholds
 
   RequestError:
