# rally2-matching-system/go-example/models/info.go
@@ -37,10 +37,6 @@ type Info struct {
 	// A string enum describing which test to run with the algorithm
 	Test string
 
-	// A string enum to indicate the metric by which a comparision score is determined.
-	// Enum[Distance, Similarity]
-	ThresholdMetric string
-
 	// The list of threshold scores for various false match rates (FMRs) for your submitted matching system.
 	// Systems are required to provide at least thresholds for achieving FMRs for 1:500, 1:1e3,  1:1e4,  1:1e5,  1:1e6
 	Thresholds map[string]float32
@@ -57,7 +53,6 @@ func (i Info) MarshalJSON() (b []byte, err error) {
 		RecommendedMem        int64
 		TechnicalContactEmail string
 		Test                  string
-		ThresholdMetric		  string
 		Thresholds            map[string]string
 	}{
 		AlgorithmName:         i.AlgorithmName,
@@ -68,7 +63,6 @@ func (i Info) MarshalJSON() (b []byte, err error) {
 		RecommendedMem:        i.RecommendedMem,
 		TechnicalContactEmail: i.TechnicalContactEmail,
 		Test:                  i.Test,
-		ThresholdMetric:	   i.ThresholdMetric,
 		Thresholds:            convertMapString(i.Thresholds),
 	}
 	return json.Marshal(temp)
@@ -93,7 +87,6 @@ func (i *Info) UnmarshalJSON(b []byte) (err error) {
 		RecommendedMem        int64
 		TechnicalContactEmail string
 		Test                  string
-		ThresholdMetric		  string
 		Thresholds            map[string]string
 	}{}
 	err = json.Unmarshal(b, &temp)
@@ -117,7 +110,6 @@ func (i *Info) UnmarshalJSON(b []byte) (err error) {
 	i.RecommendedMem = temp.RecommendedMem
 	i.TechnicalContactEmail = temp.TechnicalContactEmail
 	i.Test = temp.Test
-	i.ThresholdMetric = temp.ThresholdMetric
 	i.Thresholds = thresh
 	return
 }
